implemented all a href

--- a/app/about.html
+++ b/app/about.html
@@ -17,8 +17,8 @@
                 </a>
             </div>
             <div class="header__item">
-              <a href="about.html">
-                <span>O firmie</span>
+              <a href="index.html">
+                <span>Home</span>
               </a>
               <a href="contact.html">
                 <span>Kontakt</span>
@@ -114,8 +114,8 @@
             <div class="content">
             <div class="content__body">
                 <div class="content__header">
-                            <h1 class="content__title">travel shore</h1>
-                            <h2 class="content__subtitle">TWOJE WAKACJE NA NAJLEPSZYCH PLAŻACH ŚWIATA</h2>
+                  <h1 class="content__title">travel shore</h1>
+                  <h2 class="content__subtitle">TWOJE WAKACJE NA NAJLEPSZYCH PLAŻACH ŚWIATA</h2>
                 </div>
                 <div class="content__article">
                             <p>
@@ -138,14 +138,14 @@
             <!-- Footer -->
             <footer class="footer">
                     <div class="footer-item">
-                        <a href="#">Kontakt</a>
-                        <a href="#">O firmie</a>
+                        <a href="contact.html">Kontakt</a>
+                        <a href="index.html">Home</a>
                     </div>
                     <div class="footer__cop">
                         © 2020 travel shore biuro podróży
                     </div>
                     <div class="footer__logo">
-                        <a href=""><img src="img/footer/logofooter.png" alt=""></a>
+                        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
                     </div>
             </footer>
             <!-- Footer -->
