--- a/app/indonesia.html
+++ b/app/indonesia.html
@@ -16,11 +16,14 @@
       <div class="header-wrap">
         <div class="header-wrap__body">
             <div class="logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="img/footer/logofooter.png" alt="">
                 </a>
             </div>
             <div class="header__item">
+              <a href="index.html">
+                <span>Home</span>
+              </a>
               <a href="about.html">
                 <span>O firmie</span>
               </a>
@@ -32,79 +35,79 @@
                 <span></span>
             </div>
             <nav class="header__menu">
-                <ul class="header__list">
-                    <li>
-                        <a href="about.html" class="list-item">
-                        <span>O firmie</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Sport" class="list-item">
-                        <span>Sport</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Travel" class="list-item">
-                        <span>Podróż</span>
-                        </a>
-                        <ul class="sub-header__list">
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Australia
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Spain
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Bahamas
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Miami
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Brazil
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Cuba
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Indonesia
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#Shop" class="sub-list-item">
-                              Fiji
-                            </a>
-                          </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#Shop" class="list-item">
-                        <span>sklep</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="contact.html" class="list-item">
-                        <span>Kontakt</span>
-                        </a>
-                    </li>
-                    <div class="header__location">
-                      wrocław
-                    </div>
-                </ul>
-            </nav>
+              <ul class="header__list">
+                  <li>
+                      <a href="about.html" class="list-item">
+                      <span>O firmie</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="index.html#Sport" class="list-item">
+                      <span>Sport</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="index.html#Travel" class="list-item">
+                      <span>Podróż</span>
+                      </a>
+                      <ul class="sub-header__list">
+                        <li>
+                          <a href="australia.html" class="sub-list-item">
+                            Australia
+                          </a>
+                        </li>
+                        <li>
+                          <a href="spain.html" class="sub-list-item">
+                            Spain
+                          </a>
+                        </li>
+                        <li>
+                          <a href="bahamas.html" class="sub-list-item">
+                            Bahamas
+                          </a>
+                        </li>
+                        <li>
+                          <a href="miami.html" class="sub-list-item">
+                            Miami
+                          </a>
+                        </li>
+                        <li>
+                          <a href="brazil.html" class="sub-list-item">
+                            Brazil
+                          </a>
+                        </li>
+                        <li>
+                          <a href="cuba.html" class="sub-list-item">
+                            Cuba
+                          </a>
+                        </li>
+                        <li>
+                          <a href="indonesia.html" class="sub-list-item">
+                            Indonesia
+                          </a>
+                        </li>
+                        <li>
+                          <a href="fiji.html" class="sub-list-item">
+                            Fiji
+                          </a>
+                        </li>
+                      </ul>
+                  </li>
+                  <li>
+                      <a href="index.html#Shop" class="list-item">
+                      <span>sklep</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="contact.html" class="list-item">
+                      <span>Kontakt</span>
+                      </a>
+                  </li>
+                  <div class="header__location">
+                    wrocław
+                  </div>
+              </ul>
+          </nav>
         </div>
     </div>
     <div class="header__title">
@@ -140,8 +143,6 @@
                       The Oberoi Beach Resort, Lombok is perfectly located on the white sandy shores of Medana Beach for you to enjoy romantic walks, sunset views and exhilarating water sports. Set within twenty four acres of landscaped gardens with an infinity pool that seems to melt into the ocean; it is easy to let the romance blossom at our luxury resort.
                       <br>
                       Traditional thatched accommodation with modern conveniences. Fine international dining beside ocean views.  An onsite PADI dive centre and access to our beautiful home reef. Snorkelling and water sports from our private jetty. All topped off with our sincere hospitality for an unforgettable stay.
-                      
-                      
                     </div>
                 </div>
             </div>
@@ -330,8 +331,8 @@
    <!-- Footer -->
    <footer class="footer" id="footer">
     <div class="footer-item">
-      <a href="#">Kontakt</a>
-      <a href="#">O firmie</a>
+      <a href="contact.html">Kontakt</a>
+      <a href="about.html">O firmie</a>
     </div>
       <div class="footer__cop">
         © 2020 travel shore biuro podróży
