fixed adaptive in travel

--- a/app/about.html
+++ b/app/about.html
@@ -114,41 +114,33 @@
             <div class="content">
             <div class="content__body">
                 <div class="content__header">
-                  <h1 class="content__title">travel shore</h1>
+                  <h1 class="content__title">biuro podróży</h1>
                   <h2 class="content__subtitle">TWOJE WAKACJE NA NAJLEPSZYCH PLAŻACH ŚWIATA</h2>
                 </div>
-                <div class="content__article">
-                            <p>
-                                Отдых, Друзья, это стиль жизни! Мы хотим, чтобы Вы путешествовали. Чтобы Вы увидели волшебные закаты в теплых южных морях и ходили бсиком по сахарно-белым пляжам, чувствовали пену у ног, шум прибоя и соленый воздух прозрачных вод бескрайнего океана… Чтобы Вы попробовали настоящий обжигающий коньяк, ощутили манящий вкус французских устриц и марокканских специй… Чтобы Вы побывали у подножия великих древних сооружений человечества: пирамиды Гизы в Египте, мегалиты Мачу Пикчу в Перу, Великая Китайская стена и Терракотовая армия Сиань, статуя Христа на вершине Корковадо в Бразилии…
-                            </p>
-                            <p>
-                                Направления нашей деятельности самые разнообразные: отдых на лучших пляжах мира, поездки на спортивные и культурные мероприятия, экскурсионные программы, свадебные и горнолыжные туры, отдых на озерах, индивидуальные и комбинированные туры, детский отдых.
-                            </p>
-                            <ul>
-                                <li>Мы гарантированно предложим Вам вариант минимальной в городе цены от крупнейших туроператоров</li>
-                                <li>Наш приоритет – предложить Вам качественный и безопасный отдых, поэтому предлагаем Вам туры только надежных туроператоров.</li>
-                                <li>Мы профессионалы туристического бизнеса, работаем в туристической индустрии более 15 лет.</li>
-                                <li>Нам доверили свой отдых более 500 000 туристов.</li>
-                                <li>Наши сотрудники проходят регулярное обучение и аттестацию, посещают предлагаемые Вам страны.</li>
-                                <li>Вы можете получить полный спектр обслуживания в нашей компании: турпоездки, круизы, авиабилеты, визы, страховки. Мы можем создать любой тур по вашему желанию</li>
-                            </ul>
-                        
+                <div class="content__article">            
+                 <p>
+                  Jesteśmy Biurem współpracującym jedynie z najlepszymi organizatorami, którzy są w stanie zagwarantować Państwu prawdziwie udane wakacje. To na nas spoczywa obowiązek ciągłego sprawdzania i monitorowania działalności poszczególnych organizatorów, tak, aby byli Państwo w pełni zadowoleni z jakości usług, jakie oferują. Nie byłoby to możliwe, gdyby nie nasze wieloletnie doświadczenie w branży turystycznej, które stawia nas na pozycji partnera, a nie zwykłego pośrednika. Zawsze służymy radą, fachową i rzetelną pomocą w wyborze wymarzonego kierunku wakacyjnego oraz dołoży wszelkich starań, aby wakacje były prawdziwie udane i stanowiły przez długi czas jedno z najpiękniejszych wspomnień.  
+                  <br>
+                  Jesteśmy przede wszystkim Biurem stacjonarnym, które daje możliwość realnego spotkania się z profesjonalnymi doradcami. Już od wejścia możesz poczuć atmosferę podróży. To właśnie tutaj przygotowujemy dla Ciebie optymalnie dopasowaną ofertę podróży, która spełni oczekiwania najbardziej wymagającego podróżnika. W naszym salonie podróży nie znajdziesz rzędu stanowisk z „anonimową” obsługą, nie znajdziesz też telefonicznych konsultantów zamkniętych w boksach, bo każdego klienta traktujemy indywidualnie.
+                  Jeżeli potrzebujesz pomocy naszego doradcy w przygotowaniu oferty dla firmy, chcesz dokładnie i profesjonalnie przedstawić grupie szczegóły oferty wyjazdów szkoleniowych czy integracyjnych, wystarczy, że wybierzesz dogodny dla Ciebie termin.
+                  <br>
+                  Współpracujemy tylko z firmami, które posiadają doświadczenie w turystyce, znającymi wysokie wymagania i rosnące potrzeby klientów. Przy wyborze partnerów zawsze kierujemy się dobrem naszych klientów, przykładając szczególną wagę do jakości oferowanego produktu, różnorodności oferty, dostępności miejsc w samolotach, wymaganych prawem dokumentów, wysokości kapitału i zabezpieczenia finansowego. Równie ważnym czynnikiem są pracownicy organizatora, a w szczególności osoby, które podczas podróży są za Państwa bezpośrednio odpowiedzialne.
+                  Tylko tacy organizatorzy są w stanie zapewnić naszym wspólnym klientom prawdziwie udane, wymarzone wakacje.
+                 </p>
                 </div>
             </div>
-            <!-- Footer -->
-            <footer class="footer">
-                    <div class="footer-item">
-                        <a href="contact.html">Kontakt</a>
-                        <a href="index.html">Home</a>
-                    </div>
-                    <div class="footer__cop">
-                        © 2020 travel shore biuro podróży
-                    </div>
-                    <div class="footer__logo">
-                        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
-                    </div>
-            </footer>
-            <!-- Footer -->
+           <!-- Footer -->
+   <footer class="footer" id="footer">
+    <div class="footer-item">
+      <a href="contact.html">Kontakt</a>
+      <a href="about.html">O firmie</a>
+    </div>
+      <div class="footer__cop">
+        © 2020 travel shore biuro podróży
+      </div>
+        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
+  </footer>
+  <!-- Footer -->
             </div>
         </div>
     </div>
