--- a/app/contact.html
+++ b/app/contact.html
@@ -168,9 +168,9 @@
                     <textarea name="message"  id="message" required=""></textarea>
                     <label>Wiadomość</label>
                     <span></span>
-                <button type="button" id="sendMail" class="button">wyślij</button>
+                <button type="button" id="send" class="button">wyślij</button>
             </form>
-            <div id="errorMess" class="error"></div>
+            <div id="error" class="error"></div>
           </div>
         </div>
     </div>
