--- a/app/index.html
+++ b/app/index.html
@@ -638,26 +638,6 @@
             <div class="descr__head">Virgin Australia <img src="img/travel/Object.svg" alt=""></div>
           </div>
         </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitehaven Beach</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€950 euro
-              <span>Podróż w obie strony</span>
-            </div>
-          </div>
-        </div>
       </div>
       <!-- 2 -->
       <div class="travel__slider-item travel-slider">
@@ -665,26 +645,6 @@
           <div class="descr">
             <div class="suptitle-right">Airline</div>
             <div class="descr__head">iberia express<img src="img/travel/Object2.png" alt=""></div>
-          </div>
-        </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Las Salinas</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">2,305 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">2 godziny 45 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1590 euro
-              <span>Podróż w obie strony</span>
-            </div>
           </div>
         </div>
       </div>
@@ -696,26 +656,6 @@
             <div class="descr__head">ryan air<img src="img/travel/Object3.png" alt=""></div>
           </div>
         </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">pink sand beach</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">10,260019 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">47 godziny 15 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,500 euro
-              <span>Podróż w obie strony</span>
-            </div>
-          </div>
-        </div>
       </div>
       <!-- 4 -->
       <div class="travel__slider-item travel-slider">
@@ -723,26 +663,6 @@
           <div class="descr">
             <div class="suptitle-right">Airline</div>
             <div class="descr__head">american<img src="img/travel/Object4.png" alt=""></div>
-          </div>
-        </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitsundes Queensland</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,120 euro
-              <span>Podróż w obie strony</span>
-            </div>
           </div>
         </div>
       </div>
@@ -754,26 +674,6 @@
             <div class="descr__head">avianca<img src="img/travel/Object5.png" alt=""></div>
           </div>
         </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitsundes Queensland</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,350 euro
-              <span>Podróż w obie strony</span>
-            </div>
-          </div>
-        </div>
       </div>
       <!-- 6 -->
       <div class="travel__slider-item travel-slider">
@@ -781,26 +681,6 @@
           <div class="descr">
             <div class="suptitle-right">Airline</div>
             <div class="descr__head">american <img src="img/travel/Object4.png" alt=""></div>
-          </div>
-        </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitsundes Queensland</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€890 euro
-              <span>Podróż w obie strony</span>
-            </div>
           </div>
         </div>
       </div>
@@ -812,26 +692,6 @@
             <div class="descr__head">Lion air<img src="img/travel/Object7.png" alt=""></div>
           </div>
         </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitsundes Queensland</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€790 euro
-              <span>Podróż w obie strony</span>
-            </div>
-          </div>
-        </div>
       </div>
       <!-- 8 -->
       <div class="travel__slider-item travel-slider">
@@ -839,26 +699,6 @@
           <div class="descr">
             <div class="suptitle-right">Airline</div>
             <div class="descr__head">ryan air<img src="img/travel/Object3.png" alt=""></div>
-          </div>
-        </div>
-        <div class="travel-slider__info">
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitlewrap">Miejsce docelowe</div>
-            <div class="travel-slider__info-title">Whitsundes Queensland</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Dystans</div>
-            <div class="travel-slider__info-title">11,370015 kilometrów</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle">Czas podróży</div>
-            <div class="travel-slider__info-title">23 godziny 5 minut</div>
-          </div>
-          <div class="travel-slider__info-item">
-            <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,500 euro
-              <span>Podróż w obie strony</span>
-            </div>
           </div>
         </div>
       </div>
@@ -908,7 +748,7 @@
               €189 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1002,7 +842,7 @@
               €199 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1095,7 +935,7 @@
               €179 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1188,7 +1028,7 @@
               €249 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1281,7 +1121,7 @@
               €129 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1374,7 +1214,7 @@
               €99 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1467,7 +1307,7 @@
               €159 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1560,7 +1400,7 @@
               €139 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <button class="btn">skontaktuj się</button>
+              <h3>sprzęt dostępny w sklepie stacjonarnym</h3>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1622,47 +1462,6 @@
         </div>
       </div>
     </div>
-    <div class="relax__arrows">
-      <h2>skontaktuj się z nami</h2>
-      <a href="#footer" class="animated fadeInDown infinite slower">
-          <img src="img/relax/down1.png" alt="">
-      </a>
-    </div>
-    <div class="relax-dot">
-      <div class="profile">
-        <div class="wrap">
-          <div class="contact-form">
-            <form action="#" method="post" id="mailForm">
-              <div class="contact-left">
-                <div class="styled-input agile-styled-input-top">
-                  <input type="text" id="name" name="name" required="">
-                  <label>Imię</label>
-                  <span></span>
-                </div>
-                <div class="styled-input">
-                  <input type="email" id="email" name="email" required=""> 
-                  <label>Email</label>
-                  <span></span>
-                </div> 
-                <div class="styled-input">
-                  <input type="text" id="phone" name="phone" required="">
-                  <label>Numer telefonu</label>
-                  <span></span>
-                </div>
-              </div>
-              <div class="contact-right">
-                <div class="styled-input agileits-input">
-                  <textarea name="message"  id="message" required=""></textarea>
-                  <label>Wiadomość</label>
-                  <span></span>
-                  <button type="button" id="sendMail" class="button">wyślij</button>
-                  <div class="form-close"></div>
-            </form>
-            <div id="errorMess" class="error"></div>
-          </div>
-        </div>
-      </div>
-    </div> 
   </div>
   </section>
   <!-- Shop -->
