fixed bg image in relax.html

--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
                   </li>
                   <li>
                       <a href="#Shop" class="list-item">
-                      <span>sklep</span>
+                      <span>Sklep</span>
                       </a>
                   </li>
                   <li>
@@ -634,7 +634,7 @@
       <div class="travel__slider-item">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">Virgin Australia <img src="img/travel/Object.svg" alt=""></div>
           </div>
         </div>
@@ -643,7 +643,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap2.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">iberia express<img src="img/travel/Object2.png" alt=""></div>
           </div>
         </div>
@@ -652,7 +652,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap3.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">ryan air<img src="img/travel/Object3.png" alt=""></div>
           </div>
         </div>
@@ -661,7 +661,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap4.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">american<img src="img/travel/Object4.png" alt=""></div>
           </div>
         </div>
@@ -670,7 +670,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap5.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">avianca<img src="img/travel/Object5.png" alt=""></div>
           </div>
         </div>
@@ -679,7 +679,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap4.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">american <img src="img/travel/Object4.png" alt=""></div>
           </div>
         </div>
@@ -688,7 +688,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap7.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">Lion air<img src="img/travel/Object7.png" alt=""></div>
           </div>
         </div>
@@ -697,7 +697,7 @@
       <div class="travel__slider-item travel-slider">
         <div class="travel-slider__descr" style="background-image: url(img/travel/Bitmap3.png);">
           <div class="descr">
-            <div class="suptitle-right">Airline</div>
+            <div class="suptitle-right">Linia lotnicza</div>
             <div class="descr__head">ryan air<img src="img/travel/Object3.png" alt=""></div>
           </div>
         </div>
