--- a/app/about.html
+++ b/app/about.html
@@ -88,7 +88,7 @@
                     </li>
                     <li>
                         <a href="index.html#Shop" class="list-item">
-                        <span>sklep</span>
+                        <span>Sklep</span>
                         </a>
                     </li>
                     <li>
