--- a/app/contact.html
+++ b/app/contact.html
@@ -93,7 +93,7 @@
               </li>
               <li>
                   <a href="index.html#Shop" class="list-item">
-                  <span>sklep</span>
+                  <span>Sklep</span>
                   </a>
               </li>
               <li>
