--- a/app/miami.html
+++ b/app/miami.html
@@ -95,7 +95,7 @@
                 </li>
                 <li>
                     <a href="index.html#Shop" class="list-item">
-                    <span>sklep</span>
+                    <span>Sklep</span>
                     </a>
                 </li>
                 <li>
@@ -220,7 +220,7 @@
     </div>
     <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".5s">
       <div class="relax-slider__info-subtitle">Liczba nocy</div>
-      <div class="relax-slider__info-titleplus">Pobyt na 
+      <div class="relax-slider__info-titleplus"> 
         <div class="quantity">
           <input class="night" type="number" min="1" max="20" step="1" value="7">
         </div>nocy</div>
